--- a/style.css
+++ b/style.css
@@ -59,9 +59,23 @@ body {
   height: 2px;
   margin-bottom: 32px;
 }
-
 #middle_content {
   height: 900px;
   margin-left: 30px;
   margin-right: 20px;
+}
+#middle_content .list > li{
+  border: 1px dashed #AFAFAF;
+  list-style-type:none;
+
+}
+
+.big_title {
+  text-shadow: -1px 2px rgba(0, 0, 0, 0.2);
+
+
+}
+.title {
+  font-style: italic;
+  color:rgb(16, 97, 128);
 }
