--- a/style.css
+++ b/style.css
@@ -1,158 +1,191 @@
 body {
+  font: 14px/24px Arial, Helvetica, sans-serif;
+  color: #333;
   background: #a3a8ad url(./img/background-1.png) 0 0 repeat-x;
-	background-attachment:fixed;
-	font:14px/24px Arial,Helvetica,sans-serif;
-	color:#333;
+  background-attachment: fixed;
 }
-
 @font-face {
-    font-family: myFirstFont;
-    src: url("./font/LibreBaskerville-Bold.otf");
+  font-family: myFirstFont;
+  src: url('./font/LibreBaskerville-Bold.otf');
 }
 @font-face {
   font-family: mySecondFont;
-  src: url("./font/Cambo-Regular.otf");
+  src: url('./font/Cambo-Regular.otf');
 }
 #main {
-  background-color: rgb(255, 255, 255);
   width: 850px;
-  height: 461px;
-  margin-left: auto;
+  height: auto;
+  margin-top: 50px;
   margin-right: auto;
-  margin-top:50px;
   margin-bottom: 30px;
-  box-shadow: -1px 0px 3px 5px rgba(0, 0, 0, 0.7);
+  margin-left: auto;
   border-radius: 15px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: -1px 0 3px 5px rgba(0, 0, 0, .7);
 }
-
 #top_content {
   width: 850px;
-  height: 300px;
+  height: 350px;
 }
-#picture img{
-
-  background-color: rgb(255, 255, 255);
+#picture img {
   float: left;
-  margin-left: 30px;
-  margin-top: 25px;
-  padding: 10px;
   width: 168px;
   height: 180px;
-  box-shadow: 0px 3px 2px 2px rgba(0, 0, 0, 0.2);
+  margin-top: 25px;
+  margin-left: 30px;
+  padding: 10px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 3px 2px 2px rgba(0, 0, 0, .2);
 }
-
 #resume-top {
-  margin-right: 30px;
-  margin-top: 10px;
+  float: right;
   width: 600px;
   height: 240px;
-  float: right;
-
-}
-
-#resume-top h2 {
-
-  color: rgb(77, 169, 254);
-}
-
-.border {
-  margin-top: 0px;
-  padding-top: 0px;
-  margin-left: 30px;
+  margin-top: 10px;
   margin-right: 30px;
-  background: transparent url("./img/separator.png") repeat-x scroll 0px 0px;
-  height: 2px;
-  margin-bottom: 32px;
 }
-
+#resume-top h2 {
+  color: rgb(16, 97, 128);
+}
+.border {
+  height: 2px;
+  margin-top: 0;
+  margin-right: 30px;
+  margin-bottom: 32px;
+  margin-left: 30px;
+  padding-top: 0;
+  background: transparent url('./img/separator.png') repeat-x scroll 0 0;
+}
 #middle_content {
   height: auto;
-  margin-left: 30px;
   margin-right: 20px;
+  margin-left: 30px;
 }
-#middle_content .list > li{
-  border: 1px dashed #AFAFAF;
-  list-style-type:none;
-}
+#middle_content .list > li {
+  list-style-type: none;
+  padding-top:10px;
+  padding-bottom:10px;
+  border-left: 1px dashed #afafaf;
+  border-right: 1px dashed #afafaf;
 
+}
 #bottom-content {
   padding-bottom: 15px;
-}
 
+}
 .big_title {
-  margin-left: 20px;
   font-family: myFirstFont;
-  text-shadow: -1px 2px rgba(0, 0, 0, 0.2);
+  margin-left: 20px;
+  text-shadow: -1px 2px rgba(0, 0, 0, .2);
 }
 
 /*Titre des encadrés main*/
+
 .title {
   font-family: myFirstFont;
   font-weight: bold;
   margin-left: 20px;
-  color:rgb(16, 97, 128);
-
+  color: rgb(16, 97, 128);
 }
-
 .description {
   font-family: mySecondFont;
-  padding: 10px;
-  margin-left: 10px;
   margin-right: 10px;
+  margin-left: 10px;
+  padding: 10px;
 }
-/*Met les couleurs dans les encadrés de main*/
-.cadre {
-  background: rgb(230, 230, 230) none repeat scroll 0% 0%;
 
+/*Met les couleurs dans les encadrés de main*/
+
+.cadre {
+  background: rgb(230, 230, 230) none repeat scroll 0 0;
+  border: 1px dashed #afafaf;
 }
+
 /*bouton sociaux*/
+
 .icon_contact {
-  margin-bottom: 5px;
   margin-top: 10px;
+  margin-bottom: 5px;
   margin-left: 10px;
 }
-
 .icon_contact:hover {
-  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 2px 1px rgba(0, 0, 0, .5);
+}
+.icon_contact:active {
+  box-shadow: 0 2px 2px 1px rgba(23, 108, 150, .5);
 }
 
-.icon_contact:active {
-  box-shadow: 0px 2px 2px 1px rgba(23, 108, 150, 0.5);
-}
 /*box_exp*/
+
 .box_exp {
   font-family: none;
-  font-size:14px;
-  margin-left:10px;
-  display:inline;
-  background:#2F597F;
-  color:#fff;
-  width:150px;
-  text-align:center;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 26px;
+  display: inline;
+  clear: right;
+  width: 150px;
+  margin-left: 10px;
   padding: 3px 10px 3px 10px;
-  font-weight:normal;
-  line-height:26px;
-  clear:right;
-  }
+  text-align: center;
+  color: #fff;
+  background: #2f597f;
+}
 
 /**/
-.bouton
-{
-    color:#0000ff;
-    font-size:24px;
-    cursor:pointer;
+
+.bouton {
+  margin-left: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 1.4em;
+  width: 200px;
+  height: 43px;
+  padding: 7px;
+  /*permet le centrage vertical*/
+  font-family: myFirstFont;
+  text-align: center;
+  color: white;
+  background: rgb(16, 97, 128);
+  background: linear-gradient(rgb(9, 75, 99), rgb(16, 97, 128));
+  border-radius: 8px;
+  text-shadow: 0px 1px 0px white;
+  box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5), 0 -1px 0 rgba( 255, 255, 255, 0.4);
 }
-.bouton:hover
-{
-    text-decoration:underline;
+.bouton:hover {
+  color: white;
+  background: #555;
+  background: linear-gradient( #777, #333);
 }
-.texte
-{ margin: 0px;
-    padding:0px;
-    color:#333333;
-    display: none;
+.bouton:active {
+  color: white;
+  background: #444;
+  background: linear-gradient( #555, #2C2C2C);
+  box-shadow: 1px 1px 10px black inset, 0 1px 0 rgba( 255, 255, 255, 0.4);
 }
-.texte:hover
-{
-    color:#000000;
+.texte {
+  display: none;
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+.texte:hover {
+  color: #000;
+}
+.texte2 {
+  display: none;
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+.texte2:hover {
+  color: #000;
+}
+.texte3 {
+  display: none;
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+.texte3:hover {
+  color: #000;
 }
