--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ body {
   margin-left: auto;
   border-radius: 15px;
   background-color: rgb(255, 255, 255);
-  box-shadow: -1px 0 3px 5px rgba(0, 0, 0, .7);
+  box-shadow: -1px 0 3px 1px rgba(0, 0, 0, .7);
 }
 #top_content {
   width: 850px;
-  height: 350px;
+  height: 400px;
 }
 #picture img {
   float: left;
@@ -33,19 +33,44 @@ body {
   height: 180px;
   margin-top: 25px;
   margin-left: 30px;
-  padding: 10px;
-  background-color: rgb(255, 255, 255);
   box-shadow: 0 3px 2px 2px rgba(0, 0, 0, .2);
 }
-#resume-top {
+#title_top {
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 40px;
+  color: rgb(16, 97, 128);
+}
+#resume_top {
   float: right;
   width: 600px;
   height: 240px;
-  margin-top: 10px;
   margin-right: 30px;
 }
-#resume-top h2 {
+#resume_top h2 {
   color: rgb(16, 97, 128);
+}
+#description_top {
+  font-size: 20px;
+  font-family: mySecondFont;
+  margin-right: 10px;
+  margin-left: 30px;
+  padding: 10px;
+}
+.info {
+  font-size: 16px;
+  font-family: mySecondFont;
+  margin-left: 20px;
+  margin-bottom: 20px;
+  margin-top: -20px;
+}
+.info img {
+  width: 32px;
+  height: 32px;
+}
+.big_title {
+  font-family: myFirstFont;
+  margin-left: 40px;
 }
 .border {
   height: 2px;
@@ -63,20 +88,10 @@ body {
 }
 #middle_content .list > li {
   list-style-type: none;
-  padding-top:10px;
-  padding-bottom:10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border-left: 1px dashed #afafaf;
   border-right: 1px dashed #afafaf;
-
-}
-#bottom-content {
-  padding-bottom: 15px;
-
-}
-.big_title {
-  font-family: myFirstFont;
-  margin-left: 20px;
-  text-shadow: -1px 2px rgba(0, 0, 0, .2);
 }
 
 /*Titre des encadrés main*/
@@ -100,13 +115,17 @@ body {
   background: rgb(230, 230, 230) none repeat scroll 0 0;
   border: 1px dashed #afafaf;
 }
+#bottom_content {
+  padding-bottom: 15px;
+}
 
 /*bouton sociaux*/
 
 .icon_contact {
   margin-top: 10px;
   margin-bottom: 5px;
-  margin-left: 10px;
+  margin-left: 75px;
+  margin-right:75px;
 }
 .icon_contact:hover {
   box-shadow: 0 2px 2px 1px rgba(0, 0, 0, .5);
