--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
 
 @font-face {
   font-family: myFirstFont;
-  src: url('./font/LibreBaskerville-Bold.otf');
+  src: url('font/LibreBaskerville-Bold.otf');
 }
 @font-face {
   font-family: mySecondFont;
-  src: url('./font/Cambo-Regular.otf');
+  src: url('font/Cambo-Regular.otf');
 }
 
 /*Div principal*/
@@ -87,6 +87,11 @@ body {
   margin-bottom: 20px;
   margin-top: -20px;
 }
+
+.info a {
+  text-decoration: none;
+  color: #333;
+}
 .info img {
   width: 32px;
   height: 32px;
@@ -94,6 +99,46 @@ body {
 .big_title {
   font-family: myFirstFont;
   margin-left: 40px;
+}
+
+/*Bouton css du menu*/
+
+.texte, .texte2, .texte3 {
+  display: none;
+  margin: 0;
+  padding: 0;
+  color: #333;
+}
+.texte:hover, .texte2:hover, .texte3:hover {
+  color: #000;
+}
+.bouton {
+  margin-left: 10px;
+  font-family: Arial, sans-serif;
+  font-size: 1.4em;
+  width: 200px;
+  height: 43px;
+  padding: 7px;
+  /*permet le centrage vertical*/
+  font-family: myFirstFont;
+  text-align: center;
+  color: white;
+  background: rgb(16, 97, 128);
+  background: linear-gradient(rgb(9, 75, 99), rgb(16, 97, 128));
+  border-radius: 8px;
+  text-shadow: 0px 1px 0px white;
+  box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5), 0 -1px 0 rgba( 255, 255, 255, 0.4);
+}
+.bouton:hover {
+  color: white;
+  background: #555;
+  background: linear-gradient( #777, #333);
+}
+.bouton:active {
+  color: white;
+  background: #444;
+  background: linear-gradient( #555, #2C2C2C);
+  box-shadow: 1px 1px 10px black inset, 0 1px 0 rgba( 255, 255, 255, 0.4);
 }
 
 /*séparateur*/
@@ -121,6 +166,23 @@ body {
   padding-bottom: 10px;
   border-left: 1px dashed #afafaf;
   border-right: 1px dashed #afafaf;
+}
+
+/*box_exp*/
+
+.box_exp {
+  font-family: none;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 26px;
+  display: inline;
+  clear: right;
+  width: 150px;
+  margin-left: 10px;
+  padding: 3px 10px 3px 10px;
+  text-align: center;
+  color: #fff;
+  background: #2f597f;
 }
 
 /*Titre des encadrés main*/
@@ -161,61 +223,4 @@ body {
 }
 .icon_contact:active {
   box-shadow: 0 2px 2px 1px rgba(23, 108, 150, .5);
-}
-
-/*box_exp*/
-
-.box_exp {
-  font-family: none;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 26px;
-  display: inline;
-  clear: right;
-  width: 150px;
-  margin-left: 10px;
-  padding: 3px 10px 3px 10px;
-  text-align: center;
-  color: #fff;
-  background: #2f597f;
-}
-
-/**/
-
-.bouton {
-  margin-left: 10px;
-  font-family: Arial, sans-serif;
-  font-size: 1.4em;
-  width: 200px;
-  height: 43px;
-  padding: 7px;
-  /*permet le centrage vertical*/
-  font-family: myFirstFont;
-  text-align: center;
-  color: white;
-  background: rgb(16, 97, 128);
-  background: linear-gradient(rgb(9, 75, 99), rgb(16, 97, 128));
-  border-radius: 8px;
-  text-shadow: 0px 1px 0px white;
-  box-shadow: 0 0 5px rgba( 0, 0, 0, 0.5), 0 -1px 0 rgba( 255, 255, 255, 0.4);
-}
-.bouton:hover {
-  color: white;
-  background: #555;
-  background: linear-gradient( #777, #333);
-}
-.bouton:active {
-  color: white;
-  background: #444;
-  background: linear-gradient( #555, #2C2C2C);
-  box-shadow: 1px 1px 10px black inset, 0 1px 0 rgba( 255, 255, 255, 0.4);
-}
-.texte, .texte2, .texte3 {
-  display: none;
-  margin: 0;
-  padding: 0;
-  color: #333;
-}
-.texte:hover, .texte2:hover, .texte3:hover {
-  color: #000;
 }
